--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URL=mongodb://localhost/crm_ticket_system
+JWT_ACCESS_SECRET = A7d9Fg!r2L@mQxZ1$Vp3BnE
+JWT_REFRESH_SECRET = xT$eK8q9@Rm!Z2v7Lp*WnY5
