--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.13.8",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.4",
     "nodemon": "^3.1.10",
     "redis": "^5.5.6"
   }
