--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "helmet": "^7.2.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.13.8",
     "morgan": "^1.10.0",
